# postman-toolkit

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  deserialize.py  genindex.html  index.html  lab_datacollection.py  lab_demoday.ipynb  lab_socrata.ipynb  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree
.github/workflows/: test.yml
_sources/: index.rst.txt  modules.rst.txt
docs/source/: conf.py  modules.rst
scripts/: precommit_uv_run.sh
src/dartfx/postman/: __about__.py  __init__.py  _postman_types.py  hvdn.py  mtnards.py  postman.py  postman_collection.py  socrata.py  templates.py  uscensus.py
src/dartfx/postman/templates/: __init__.py  ai_folder.md.j2  code_folder.md.j2  collection_description.md.j2  data_folder.md.j2  footer.md  header.md  metadata_croissant_request.md.j2  metadata_dcat_request.md.j2  metadata_ddi-c_request.md.j2  metadata_ddi-cdif_request.md.j2  metadata_folder.md.j2  metadata_markdown_request.md.j2  metadata_markdown_request_visualizer.js.j2  metadata_mtnards_request.md.j2  metadata_socrata_request.md.j2  mtnards_collection_folder.md.j2  mtnards_folder.md.j2  mtnards_metadata_folder.md.j2  mtnards_regression_request.md.j2  mtnards_select_request.md.j2  mtnards_tabulate_request.md.j2  socrata_workspace.md.j2  sql_folder.md.j2  visualization_folder.md.j2  workspace.md.j2
temp/: lab_datacollection.py  lab_demoday.ipynb  socrata_sfo.ipynb  socrata_sfo.json
tests/: conftest.py  dot.env  env.template  socrata_vw6y-z8j6.collection.json  test_collection_deserializer.py  test_collection_serializer.py  test_dataproductcollection.py  test_socrata.py  test_socrata_generator.py  test_socrata_publisher.py  test_workspace.py
tests/data/: DAndD5editionAPI.postman_collection.json  Hello World.postman_collection.json  MTNA_USElection2020.postman_collection.json
tests/output/: DAndD5editionAPI.postman_collection.json  Hello World.postman_collection.json  hello_world.json
tests/socrata/data.sfgov.org/: vw6y-z8j6.json
