[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dartfx-postman"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "kulnor", email = "pascal.heus@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "dartfx-mtnards",
  "dartfx-postmanapi",
  "dartfx-socrata",
  "dartfx-uscensus",
  "jinja2>=3",
  "pydantic>=2",
  "requests>2.32.0"
]

[project.urls]
Documentation = "https://github.com/DataArtifex/dartfx-postman#readme"
Issues = "https://github.com/DataArtifex/dartfx-postman/issues"
Source = "https://github.com/DataArtifex/dartfx-postman"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dartfx"]

[tool.hatch.build] 
# Include Jinja2 templates
include = [
  "src/dartfx/templates/**/*.j2"
]

[tool.hatch.version]
path = "src/dartfx/postman/__about__.py"

[tool.hatch.envs.default]
post-install-commands = []
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "requests"
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dartfx/postman tests}"

[tool.coverage.run]
source_pkgs = ["dartfx/postman", "tests"]
branch = true
parallel = true
omit = [
  "src/dartfx/postman/__about__.py",
]

[tool.coverage.paths]
dartfx_postman = ["src/dartfx/model", "*/dartfx/postman/src/dartfx/postman"]
tests = ["tests", "*/dartfx/postman/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
