[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dartfx-postman"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "kulnor", email = "pascal.heus@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "dartfx-mtnards @ git+https://github.com/DataArtifex/mtnards-toolkit.git",
  "dartfx-postmanapi @ git+https://github.com/DataArtifex/postman-api.git",
  "dartfx-socrata @ git+https://github.com/DataArtifex/socrata-toolkit.git",
  "dartfx-uscensus @ git+https://github.com/DataArtifex/uscensus-toolkit.git",
  "frictionless>=5.18.0",
  "jinja2>=3",
  "pydantic>=2",
  "requests>2.32.0"
]

[project.urls]
Documentation = "https://github.com/DataArtifex/dartfx-postman#readme"
Issues = "https://github.com/DataArtifex/dartfx-postman/issues"
Source = "https://github.com/DataArtifex/dartfx-postman"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dartfx"]

[tool.hatch.build] 
# Include Jinja2 templates
include = [
  "src/dartfx/templates/**/*.j2"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/dartfx/postman/__about__.py"

[dependency-groups]
dev = [
  "coverage[toml]>=6.5",
  "pytest>=9",
  "pytest-benchmark>=4.0.0",
  "mypy>=1.0.0",
  "python-dotenv>=1.0.0",
  "ruff>=0.3.0",
  "pre-commit>=3.0.0",
  "notebook>=7.0",
]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=1.2.0",
  "myst-parser>=1.0.0",
  "sphinx-copybutton>=0.5.0",
]

[tool.hatch.envs.default]
post-install-commands = []
dependencies = [
  "coverage[toml]>=6.5",
  "pytest>=9",
  "notebook>=7.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.12", "3.13"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dartfx/postman tests}"

[tool.hatch.envs.docs]
dependencies = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=1.2.0",
  "myst-parser>=1.0.0",
  "sphinx-copybutton>=0.5.0",
]
[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs/source docs/build/html"
serve = "python -m http.server -d docs/build/html"

[tool.coverage.run]
source_pkgs = ["dartfx/postman", "tests"]
branch = true
parallel = true
omit = [
  "src/dartfx/postman/__about__.py",
]

[tool.coverage.paths]
dartfx_postman = ["src/dartfx/model", "*/dartfx/postman/src/dartfx/postman"]
tests = ["tests", "*/dartfx/postman/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
  "ARG",
  "PT",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["dartfx"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
  